umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_1,3-diazetidine.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: heterocycles
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 4
    topology: Cr
    atoms:
      - "N#h#n#v2"
      - "C#h2#v2"
      - "C#h2#v2"
      - "N#h#n#v2"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 4
    topology: Cr
    atoms:
      - "N#h#n#v2"
      - "C#h2#v2"
      - "C#h2#v2"
      - "N#h#n#v2"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
